<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="label_input_email_login_screen">Email</string>
    <string name="label_input_password_login_screen">Senha</string>
    <string name="label_button_login_screen">Entrar</string>
    <string name="label_forgot_password_login_screen">Esqueci minha senha</string>
    <string name="label_sign_up_login_screen">Criar conta</string>
    <string name="message_email_invalid_format_login_screen">Email inválido</string>
    <string name="message_password_invalid_format_login_screen">Senha inválida</string>

    <string name="label_title_signup_screen">Criar conta</string>
    <string name="label_button_signup_screen">Cadastrar</string>
    <string name="label_input_first_name_signup_screen">Nome</string>
    <string name="label_input_last_name_signup_screen">Sobrenome</string>
    <string name="label_input_email_signup_screen">Email</string>
    <string name="label_input_password_signup_screen">Senha</string>
    <string name="message_first_name_invalid_format_signup_screen">Nome inválido</string>
    <string name="message_last_name_invalid_format_signup_screen">Sobrenome inválido</string>
    <string name="message_email_invalid_format_signup_screen">Email inválido</string>
    <string name="message_password_invalid_format_signup_screen">Senha inválida</string>

    <string name="label_title_validate_signup_screen">Validar cadastro</string>
    <string name="label_button_validate_signup_screen">Validar</string>

    <string name="label_title_recover_flow">Recuperar senha</string>
    <string name="label_button_recover_flow">Continuar</string>
    <string name="label_sub_title_recover_email_screen">Informe seu email para receber o código</string>
    <string name="label_code_recover_code_screen">Código</string>
    <string name="message_code_invalid_format_recover_code_screen">Código inválido</string>

    <string name="label_button_recover_password_screen">Salvar</string>
    <string name="label_sub_title_recover_password_screen">Crie uma nova senha</string>
    <string name="label_code_recover_password_screen">Nova senha</string>
    <string name="message_password_invalid_format_recover_password_screen">Senha deve ter ao menos 6 caracteres</string>
</resources>

